Fixed scrollbar

--- a/src/components/TitleScreen.css
+++ b/src/components/TitleScreen.css
@@ -41,7 +41,7 @@
 
 .title-screen h3 {
     position: absolute;
-    bottom: 20px;
+    bottom: 30px;
     font-family: "Playfair Display", serif;
     color: #cccccc;
 }
